# libquicr

./: .gitignore  CMakeLists.txt
cmd/: CMakeLists.txt
cmd/opencv/: CMakeLists.txt  opencv_test.cpp  opencv_test.h
cmd/really/: CMakeLists.txt  really.cpp  reallyTest.cpp
include/quicr/: quicr_client.h
src/: quicr_client.cpp  quicr_client_raw_session.cpp  quicr_server_raw_session.cpp
